# tapas2

./: Cargo.toml  README.md  index.html  package.spiproj
contract/: Cargo.toml  README.md  build.ps1  tapas2_contract.dib  tapas2_contract.dib.html  tapas2_contract.dib.ipynb  tapas2_contract.fsx  tapas2_contract.rs  tapas2_contract.spi
scripts/: build.ps1  outdated.ps1  workflow.ps1
